# customer-manager-rust

./: .gitignore  Cargo.toml  README.md  SOFTWARE_SPEC.md  USER_GUIDE.md  customer.db  customers_export.csv  installer.iss
src/: app.rs  db.rs  main.rs  models.rs
