[package]
name = "customer-manager-rust"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/nikus-pan/customer-manager-rust"

[dependencies]
eframe = "0.29"
egui = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
